test/expected/regression-http-close.txt
/scripts/regression-http-close.js:21
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:21:15)
    at Object.onceWrapper (events.js:312:19)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitCloseNT (net.js:1629:8)
    at _combinedTickCallback (internal/process/next_tick.js:99:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at internalNextTick (internal/process/next_tick.js:269:5)
    at Server._emitCloseIfDrained (net.js:1623:3)
    at Server.close (net.js:1607:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:20:14)
    at Object.onceWrapper (events.js:312:19)
    at emitNone (events.js:110:20)
    at IncomingMessage.emit (events.js:207:7)
    at endReadableNT (_stream_readable.js:1045:12)
    at _combinedTickCallback (internal/process/next_tick.js:102:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at process.nextTick (internal/process/next_tick.js:247:5)
    at endReadable (_stream_readable.js:1036:13)
    at IncomingMessage.Readable.read (_stream_readable.js:458:7)
    at flow (_stream_readable.js:833:34)
    at resume_ (_stream_readable.js:815:3)
    at _combinedTickCallback (internal/process/next_tick.js:102:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at process.nextTick (internal/process/next_tick.js:247:5)
    at resume (_stream_readable.js:802:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:794:5)
    at IncomingMessage.Readable.on (_stream_readable.js:764:12)
    at ClientRequest.get (/scripts/regression-http-close.js:17:9)
    at Object.onceWrapper (events.js:312:19)
    at emitOne (events.js:115:13)
    at ClientRequest.emit (events.js:210:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:563:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:116:23)
    at Socket.socketOnData (_http_client.js:452:20)
    at emitOne (events.js:115:13)
    at Socket.emit (events.js:210:7)
    at addChunk (_stream_readable.js:250:12)
    at readableAddChunk (_stream_readable.js:237:11)
    at Socket.Readable.push (_stream_readable.js:195:10)
    at TCP.onread (net.js:586:20)
    at tickOnSocket (_http_client.js:630:10)
    at onSocketNT (_http_client.js:682:5)
    at _combinedTickCallback (internal/process/next_tick.js:102:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at process.nextTick (internal/process/next_tick.js:247:5)
    at ClientRequest.onSocket (_http_client.js:670:11)
    at _http_agent.js:190:11
    at oncreate (_http_agent.js:236:5)
    at Agent.createSocket (_http_agent.js:223:5)
    at Agent.addRequest (_http_agent.js:183:10)
    at new ClientRequest (_http_client.js:271:16)
    at request (http.js:39:10)
    at Object.get (http.js:43:13)
    at Server.listen (/scripts/regression-http-close.js:16:8)
    at Object.onceWrapper (events.js:312:19)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitListeningNT (net.js:1332:10)
    at _combinedTickCallback (internal/process/next_tick.js:99:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at internalNextTick (internal/process/next_tick.js:269:5)
    at Server.setupListenHandle [as _listen2] (net.js:1319:3)
    at listenInCluster (net.js:1353:12)
    at doListen (net.js:1479:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:84:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:100:10)
    at createServerHandle (net.js:1229:14)
    at Server.setupListenHandle [as _listen2] (net.js:1285:14)
    at listenInCluster (net.js:1353:12)
    at doListen (net.js:1479:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:84:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:100:10)
    at Object.lookup (dns.js:183:19)
    at lookupAndListen (net.js:1474:7)
    at Server.listen (net.js:1449:7)
    at Object.<anonymous> (/scripts/regression-http-close.js:12:4)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
